--- a/style.css
+++ b/style.css
@@ -18,34 +18,39 @@ body {
     opacity: 0.9;
 }
 
-header h1 {
+main h1 {
     font-size: 3.5rem;
     margin-bottom: 0;
     text-align: center;
 }
 
-header p {
+main h2 {
     font-size: 2rem;
     margin-bottom: 0;
     text-align: center;
 }
 
 main {
-    margin: 5% 20%;
-    padding: 5% 15%;
+    margin: 10%;
+    padding: 2% 10%;
     border-radius: 5px;
     background: #eee;
 }
  
 /* RESPONSIVE */
 @media (max-width: 700px) {
-  h1 {
-    font-size: 3.5rem;
+  main h1 {
+    font-size: 2rem;
     line-height: 1.2;
   }
 
-  #main {
-    margin: 0;
+  main h2 {
+    font-size: 1em;
+  }
+
+  main {
+    margin: 15px;
     padding: 10px;
+    font-size: 1em;
   }
 }
