--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ html {
 }
 
 body {
-    /* Native font stack https://getbootstrap.com/docs/4.2/content/reboot/#native-font-stack */
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
       'Helvetica Neue', Arial, sans-serif;
     font-size: 1.6rem;
@@ -12,10 +11,10 @@ body {
     text-align: justify;
     color: #333;
     margin: 0;
-    background: #ffffff url("https://images.unsplash.com/1/work-station-straight-on-view.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80") no-repeat center;
+    background: #ffffff url("https://images.unsplash.com/photo-1542435503-956c469947f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=667&q=80") no-repeat center;
     background-size: cover;
     background-attachment: fixed;
-    opacity: 0.9;
+    opacity: 0.7;
 }
 
 main h1 {
@@ -49,8 +48,25 @@ main {
   }
 
   main {
-    margin: 15px;
-    padding: 10px;
+    margin: 20px 15px;
+    padding: 20px;
     font-size: 1em;
   }
+}
+
+.form-group{
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.form-group input{
+  width: 100%;
+  font-size: 1em;
+  color: grey !important;
+  padding: 10px 12px;
+  background: transparent;
+  border: 1px solid gray;
+  z-index: 9;
+  box-sizing: border-box;
+  display: block;
 }
